[package]
name = "egui-modal"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "a modal library for egui"
repository = "https://github.com/n00kii/egui-modal"
readme = "README.md"
authors = ["n00kii"]

[dependencies]
egui = { version = "0.33.3", default-features = false }

[dev-dependencies]
eframe = "0.33.3"
